Convocation postman and swagger
